updated the welcome component

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -44,7 +44,7 @@ import { dashLink, SITE_TITLE} from "../consts";
             height: 2px;
             bottom: -4px;
             left: 0;
-            background-color: #ca3bf6;
+            background-color: #FEA5D5;
             transition: width 0.3s ease;
         }
         .nav-link:hover::after {
