testimonial component added, fixed welcome page

--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -4,10 +4,10 @@ import background from "../assets/background.svg";
 import banneIMG from "../assets/bg-nak.jpg";
 // import "../styles/fuego.css";
 
-import slideUno from "../assets/uno.jpeg";
-import slideDos from "../assets/dos.jpg";
-import slideTres from "../assets/image7.jpeg";
-import cuatro from "../assets/tostada.jpeg";
+import slideUno from "../assets/dog12.jpg";
+import slideDos from "../assets/dog12.jpg";
+import slideTres from "../assets/dog12.jpg";
+import cuatro from "../assets/dog12.jpeg";
 
 const resturantName = "Tortas Ahogadas Mi Barrio";
 const subName = "Estilo Jalisco";
