--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -77,11 +77,11 @@ import { dashLink, SITE_TITLE} from "../consts";
                     <a href="/about/" class="nav-link text-gray-800 hover:text-pink-300 px-3 py-2 text-sm font-medium">About</a>
                     <a href="/client/" class="nav-link text-gray-800 hover:text-pink-300 px-3 py-2 text-sm font-medium">Clients</a>
                     <a href="/services/" class="nav-link text-gray-800 hover:text-pink-300 px-3 py-2 text-sm font-medium">Services</a>
-                    <a href="/contact/" class="nav-link text-gray-800 hover:text-pink-200 px-3 py-2 text-sm font-medium">Contact</a>
+                    <!-- <a href="/contact/" class="nav-link text-gray-800 hover:text-pink-200 px-3 py-2 text-sm font-medium">Contact</a> -->
                     
                     <!-- CTA Button -->
                     <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md text-sm font-medium transition-colors duration-300">
-                        Get Started
+                        Contact Us
                     </button>
                 </div>
 
