--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,10 @@
 ---
-import astroLogo from "../assets/logoicon.jpg";
+import astroLogo from "../assets/Sunnyside.jpg";
 import { dashLink, SITE_TITLE} from "../consts";
+import { Image } from "astro:assets";
+
 ---
+
 <!-- 
 <div class="nav-container">
   <div class="nav-logo">
@@ -67,7 +70,8 @@ import { dashLink, SITE_TITLE} from "../consts";
             <div class="flex justify-between h-20 items-center">
                 <!-- Logo -->
                 <div class="flex-shrink-0 flex items-center nav-logo-container">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/041614c9-7f60-4bf3-83d9-a80b19f1d780.png" alt="Company logo with blue and white color scheme showing a rocket icon" class="h-8 w-auto">
+                    <Image src={astroLogo} alt="Company Logo" class="h-8 w-auto" />
+                    <!-- <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/041614c9-7f60-4bf3-83d9-a80b19f1d780.png" alt="Company logo with blue and white color scheme showing a rocket icon" class="h-8 w-auto"> -->
                     <span class="ml-2 text-xl font-bold text-gray-800">{SITE_TITLE}</span>
                 </div>
 
@@ -109,10 +113,3 @@ import { dashLink, SITE_TITLE} from "../consts";
         </div>
     </nav>
     <script src="../scripts/demo.js"></script>
-
-
-   
-
-
-
-
