--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -4,9 +4,9 @@ import background from "../assets/background.svg";
 import banneIMG from "../assets/bg-nak.jpg";
 // import "../styles/fuego.css";
 
-import slideUno from "../assets/uno.jpeg";
-import slideDos from "../assets/dos.jpg";
-import slideTres from "../assets/image7.jpeg";
+import slideUno from "../assets/dog4.jpg";
+import slideDos from "../assets/dog4.jpg";
+import slideTres from "../assets/dog4.jpg";
 import cuatro from "../assets/tostada.jpeg";
 
 const resturantName = "Tortas Ahogadas Mi Barrio";
