images bug fixed

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -265,7 +265,7 @@ import Testimonials from "./testimonials.astro";
         class="bg-purple-50 p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2"
       >
         <img
-          src="src/assets/dog1.jpg"
+           src={Dog1.src}
           alt="Astronaut playing with dogs in a futuristic space-themed dog park"
           class="w-full h-auto rounded-lg shadow-xl"
         />
@@ -276,7 +276,7 @@ import Testimonials from "./testimonials.astro";
         class="bg-purple-50 p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2"
       >
         <img
-          src="src/assets/dog3.jpg"
+           src={Dog2.src}
           alt="Astronaut playing with dogs in a futuristic space-themed dog park"
           class="w-full h-auto rounded-lg shadow-xl"
         />
