--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,19 +8,20 @@ import ReviewSection from "./ReviewSection.astro";
 import "./ImageSlideSection.astro";
 import ImageSlideSection from "./ImageSlideSection.astro";
 
-import Dog1 from '../assets/dog1.jpg';
-import Dog2 from '../assets/dog3.jpg';
-import Dog3 from '../assets/pet3.jpg';
-import Dog4 from '../assets/pet7.jpg';
-import Dog5 from '../assets/dog4.jpg';
-import Dog6 from '../assets/dog12.jpg';
-
+import Dog1 from "../assets/dog1.jpg";
+import Dog2 from "../assets/dog3.jpg";
+import Dog3 from "../assets/pet3.jpg";
+import Dog4 from "../assets/pet7.jpg";
+import Dog5 from "../assets/dog4.jpg";
+import Dog6 from "../assets/dog12.jpg";
 
 import Testimonials from "./testimonials.astro";
+
+const slogan="These moments capture the essence of what makes PawCare special."
+
 ---
 
-<!-- Hero Section -gradient-bg to make the background darker -->
-<!-- <section class="gradient-bg py-20">
+<!-- Hero Section -gradient-bg to make the background darker --><!-- <section class="gradient-bg py-20">
   <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">
     <div class="md:w-1/2 animate-slide-in-left">
       <h1 class="text-4xl md:text-5xl font-bold text-blue-600 mb-6">
@@ -44,16 +45,13 @@ import Testimonials from "./testimonials.astro";
           >Services</a
         >
       </div>
-    </div> -->
-    <!-- <div class="md:w-1/2 mt-12 md:mt-0 flex justify-center">
+    </div> --><!-- <div class="md:w-1/2 mt-12 md:mt-0 flex justify-center">
       <Image
         src={rocket}
         alt="Sunnyside Dog Daycare"
         class="shadow-xl rounded-lg"
       />
-    </div> -->
-
-    <!-- <div class="md:w-1/2 relative">
+    </div> --><!-- <div class="md:w-1/2 relative">
       <img
         src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/77ca397a-1ee2-46f0-a723-4687dbb6c06e.png"
         alt="Happy golden retriever playing with a professional dog sitter in a sunny yard with green grass and toys scattered around"
@@ -86,41 +84,67 @@ import Testimonials from "./testimonials.astro";
       </div>
     </div>
   </div>
-</section> -->
-<!-- Hero Section -->
-  <section class="bg-gradient-to-r from-blue-50 to-green-50 py-16">
-    <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">
-      <div class="md:w-1/2 mb-10 md:mb-0">
-        <h1 class="text-4xl md:text-5xl font-bold text-yellow-500 leading-tight mb-4">Caring For Your Pets, <span class="text-blue-600">Every Step Of The Way</span></h1>
-        <p class="text-lg text-gray-600 mb-8">Professional, loving care for your furry friend when you can't be there. Our certified sitters provide the perfect home away from home.</p>
-        <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-          <button class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg shadow-md transition duration-300">Book Now</button>
-          <button class="border-2 border-blue-600 text-blue-600 font-bold py-3 px-6 rounded-lg hover:bg-blue-50 transition duration-300">Learn More</button>
-        </div>
+</section> --><!-- Hero Section -->
+<section class="bg-gradient-to-r from-blue-50 to-green-50 py-16">
+  <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">
+    <div class="md:w-1/2 mb-10 md:mb-0">
+      <h1
+        class="text-4xl md:text-5xl font-bold text-yellow-500 leading-tight mb-4"
+      >
+        Caring For Your Pets, <span class="text-blue-600"
+          >Every Step Of The Way</span>
+      </h1>
+      <p class="text-lg text-gray-600 mb-8">
+        Professional, loving care for your furry friend when you can't be there.
+        Our certified sitters provide the perfect home away from home.
+      </p>
+      <div
+        class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4"
+      >
+        <button
+          class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg shadow-md transition duration-300"
+          >Book Now</button
+        >
+        <button
+          class="border-2 border-blue-600 text-blue-600 font-bold py-3 px-6 rounded-lg hover:bg-blue-50 transition duration-300"
+          >Learn More</button
+        >
       </div>
-      <div class="md:w-1/2 relative">
-        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/77ca397a-1ee2-46f0-a723-4687dbb6c06e.png" alt="Happy golden retriever playing with a professional dog sitter in a sunny yard with green grass and toys scattered around" class="rounded-lg shadow-xl float-animation max-w-full h-auto">
-        <div class="absolute -bottom-5 -right-5 bg-white p-4 rounded-lg shadow-md hidden md:block">
-          <div class="flex items-center">
-            <div class="bg-blue-100 p-2 rounded-full mr-3">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-              </svg>
-            </div>
-            <div>
-              <p class="font-bold text-gray-800">Certified Professionals</p>
-              <p class="text-sm text-gray-600">100+ happy clients</p>
-            </div>
+    </div>
+    <div class="md:w-1/2 relative">
+      <img
+        src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/77ca397a-1ee2-46f0-a723-4687dbb6c06e.png"
+        alt="Happy golden retriever playing with a professional dog sitter in a sunny yard with green grass and toys scattered around"
+        class="rounded-lg shadow-xl float-animation max-w-full h-auto"
+      />
+      <div
+        class="absolute -bottom-5 -right-5 bg-white p-4 rounded-lg shadow-md hidden md:block"
+      >
+        <div class="flex items-center">
+          <div class="bg-blue-100 p-2 rounded-full mr-3">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 text-blue-600"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M5 13l4 4L19 7"></path>
+            </svg>
+          </div>
+          <div>
+            <p class="font-bold text-gray-800">Certified Professionals</p>
+            <p class="text-sm text-gray-600">100+ happy clients</p>
           </div>
         </div>
       </div>
     </div>
-  </section>
-
-
-
-
-
+  </div>
+</section>
 
 <!-- Certification Icon's Section -->
 <section class="py-12 bg-white">
@@ -137,7 +161,7 @@ import Testimonials from "./testimonials.astro";
             d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
             clip-rule="evenodd"></path></svg
         >
-        <span class="text-xl font-bold text-yellow-800">100% Safe</span>
+        <span class="text-xl font-bold text-yellow-600">100% Safe</span>
       </div>
       <div class="flex items-center">
         <svg
@@ -150,7 +174,7 @@ import Testimonials from "./testimonials.astro";
             d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
             clip-rule="evenodd"></path></svg
         >
-        <span class="text-xl font-bold text-yellow-800">5- Paw Rating</span>
+        <span class="text-xl font-bold text-yellow-600">5- Paw Rating</span>
       </div>
       <div class="flex items-center">
         <svg
@@ -163,7 +187,7 @@ import Testimonials from "./testimonials.astro";
             d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
             clip-rule="evenodd"></path></svg
         >
-        <span class="text-xl font-bold text-yellow-800">Happy Clients</span>
+        <span class="text-xl font-bold text-yellow-600">Happy Clients</span>
       </div>
     </div>
   </div>
@@ -172,12 +196,12 @@ import Testimonials from "./testimonials.astro";
 <section id="features" class="py-20 bg-white">
   <div class="container mx-auto px-6">
     <h2
-      class="text-3xl font-bold text-center text-blue-600 mb-4 animate-fade-in"
+      class="text-3xl font-bold text-center text-yellow-600 mb-4 animate-fade-in"
     >
-      Our Doggy Services
+      Our Doggy <span class="text-blue-600">Clients</span>
     </h2>
     <p
-      class="text-lg text-center text-blue-800 mb-16 max-w-2xl mx-auto animate-fade-in animate-delay-100"
+      class="text-lg text-center text-gray-800 mb-16 max-w-2xl mx-auto animate-fade-in animate-delay-100"
     >
       Comprehensive care solutions tailored to your dog's needs and your
       schedule. Every service comes with complete peace of mind.
@@ -286,12 +310,11 @@ import Testimonials from "./testimonials.astro";
 <!-- Dog's Section -->
 <section id="services" class="py-20 bg-gray-50">
   <div class="container mx-auto px-6">
-    <h2 class="text-3xl font-bold text-center text-blue-900 mb-4">
-      Happy Dogs
+    <h2 class="text-3xl font-bold text-center text-gray-900 mb-4">
+      Happy<span class="text-yellow-600"> Dogs</span>
     </h2>
-    <p class="text-lg text-center text-blue-800 mb-16 max-w-2xl mx-auto">
-      See the joy and love we bring to every furry friend in our care. These
-      moments capture the essence of what makes PawCare special.
+    <p class="text-lg text-center text-gray-800 mb-16 max-w-2xl mx-auto">
+      See the joy and love we bring to every furry friend in our care! 
     </p>
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -300,7 +323,7 @@ import Testimonials from "./testimonials.astro";
         class="bg-purple-50 p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2"
       >
         <img
-           src={Dog1.src}
+          src={Dog1.src}
           alt="Astronaut playing with dogs in a futuristic space-themed dog park"
           class="w-full h-auto rounded-lg shadow-xl"
         />
@@ -311,7 +334,7 @@ import Testimonials from "./testimonials.astro";
         class="bg-purple-50 p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2"
       >
         <img
-           src={Dog2.src}
+          src={Dog2.src}
           alt="Astronaut playing with dogs in a futuristic space-themed dog park"
           class="w-full h-auto rounded-lg shadow-xl"
         />
@@ -322,7 +345,7 @@ import Testimonials from "./testimonials.astro";
         class="bg-purple-50 p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2"
       >
         <img
-           src={Dog3.src}
+          src={Dog3.src}
           alt="Astronaut playing with dogs in a futuristic space-themed dog park"
           class="w-full h-auto rounded-lg shadow-xl"
         />
@@ -332,7 +355,7 @@ import Testimonials from "./testimonials.astro";
         class="bg-purple-50 p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2"
       >
         <img
-           src={Dog4.src}
+          src={Dog4.src}
           alt="Astronaut playing with dogs in a futuristic space-themed dog park"
           class="w-full h-auto rounded-lg shadow-xl"
         />
@@ -343,7 +366,7 @@ import Testimonials from "./testimonials.astro";
         class="bg-purple-50 p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2"
       >
         <img
-           src={Dog5.src}
+          src={Dog5.src}
           alt="Astronaut playing with dogs in a futuristic space-themed dog park"
           class="w-full h-auto rounded-lg shadow-xl"
         />
