fixed the welcome layout

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -36,38 +36,38 @@ import { Image } from "astro:assets";
 
           <!-- Quick Links Section -->
           <div class="w-full md:w-1/4">
-            <h3 class="text-lg font-semibold mb-4 text-center md:text-left">
+            <h3 class="text-lg text-sky-300 font-semibold mb-4 text-center md:text-left">
               Menu
             </h3>
             <ul class="space-y-2 flex flex-col items-center md:items-start">
               <li>
                 <a
                   href="#"
-                  class="text-gray-400 hover:text-white transition duration-300"
+                  class=" hover:text-yellow-200 transition duration-300"
                   >Home</a>
               </li>
               <li>
                 <a
                   href="#"
-                  class="text-gray-400 hover:text-white transition duration-300"
+                  class=" hover:text-yellow-200  transition duration-300"
                   >Our Story</a>
               </li>
               <li>
                 <a
                   href="#"
-                  class="text-gray-400 hover:text-white transition duration-300"
+                  class=" hover:text-yellow-200 transition duration-300"
                   >Clients</a>
               </li>
               <li>
                 <a
                   href="#"
-                  class="text-gray-400 hover:text-white transition duration-300"
+                  class=" hover:text-yellow-200 transition duration-300"
                   >Services</a>
               </li>
               <li>
                 <a
                   href="#"
-                  class="text-gray-400 hover:text-white transition duration-300"
+                  class=" hover:text-yellow-200 transition duration-300"
                   >Contact</a>
               </li>
               <!-- <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Careers</a></li> -->
@@ -76,12 +76,12 @@ import { Image } from "astro:assets";
 
           <!-- Contact Section -->
           <div class="w-full md:w-1/4">
-            <h3 class="text-lg font-semibold mb-4 text-center md:text-left">
+            <h3 class="text-lg text-sky-300 font-semibold mb-4 text-center md:text-left">
               Contact Us
             </h3>
             <address
-              class="text-gray-400 not-italic space-y-2 flex flex-col items-center md:items-start"
-            >
+              class="not-italic space-y-2 flex flex-col items-center md:items-start"
+          >
               <div class="flex items-center">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -166,7 +166,7 @@ import { Image } from "astro:assets";
         </div>
 
         <!-- Copyright Section -->
-        <div class="border-t border-gray-800 mt-12 pt-6">
+        <div class="border-t border-yellow-400 mt-12 pt-6">
           <div class="flex flex-col md:flex-row justify-between items-center">
             <p class="text-gray-400 text-center md:text-left text-sm">
               © 2025 Sunnyside Dog Daycare Name| All rights reserved.
